Fixed navbar (needs dynamic stretching)

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ header nav ul li{
   display: inline-block;
   float: left;
   list-style: none;
-  padding: 0 16px;
+  padding: 20px 16px;
 }
 
 header nav ul li a:hover{
@@ -87,7 +87,7 @@ ul{
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding-inline-start: 100px;
+  padding-inline-start: 20px;
 }
 
 .footer{
@@ -138,13 +138,7 @@ ul{
   color: #99ff99;
 }
 
-.title-child {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: baseline;
-}
+
 
 .mainBlock{
   padding: 3% 15%;
